pyrosccope/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pyroscope-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host : "pyroscope.IP_TO_REPLACE.nip.io"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: pyroscope
                port:
                  number: 4040
